# PetitPoucet

./: .gitignore  .gitmodules  Doxyfile  INSTALL.md  PetitPoucet_8hh.html  PetitPoucet_8hh_source.html  README.md  README_8md.html  ServerInterface_8cc.html  ServerInterface_8hh.html  ServerInterface_8hh.js  ServerInterface_8hh_source.html  TerminalInterface_8cc.html  TerminalInterface_8cc.js  TerminalInterface_8hh.html  TerminalInterface_8hh.js  TerminalInterface_8hh_source.html  Utils_8cc.html  Utils_8cc.js  Utils_8hh.html  Utils_8hh.js  Utils_8hh_source.html  annotated.html  annotated_dup.js  classes.html  classpetitpoucet_1_1serverinterface_1_1ConfigurationSetup-members.html  classpetitpoucet_1_1serverinterface_1_1ConfigurationSetup.html  classpetitpoucet_1_1serverinterface_1_1ConfigurationSetup.js  classpetitpoucet_1_1serverinterface_1_1PPServer-members.html  classpetitpoucet_1_1serverinterface_1_1PPServer.html  classpetitpoucet_1_1serverinterface_1_1PPServer.js  classpetitpoucet_1_1serverinterface_1_1PPServerInterface-members.html  classpetitpoucet_1_1serverinterface_1_1PPServerInterface.html  classpetitpoucet_1_1serverinterface_1_1PPServerInterface.js  classpetitpoucet_1_1serverinterface_1_1PPServerOptions-members.html  classpetitpoucet_1_1serverinterface_1_1PPServerOptions.html  classpetitpoucet_1_1serverinterface_1_1PPServerOptions.js  classpetitpoucet_1_1utils_1_1filemanipulation_1_1ConfigurationSetup-members.html  classpetitpoucet_1_1utils_1_1filemanipulation_1_1ConfigurationSetup.html  classpetitpoucet_1_1utils_1_1filemanipulation_1_1ConfigurationSetup.js  (+56 more)
.github/workflows/: c-cpp.yml  doxygen.yml
cpp/: CMakeLists.txt  PetitPoucet.hh  README.md  config.txt  create_time-space_stamp.cc  main.cc  main1.cc  main2.cc
cpp/PetitPoucet/: FileManipulation.cc
cpp/PetitPoucet/Server/: ServerInterface.cc  ServerInterface.hh
cpp/PetitPoucet/UI/: TerminalInterface.cc  TerminalInterface.hh
cpp/PetitPoucet/Utils/: utils.cc  utils.hh
example/: hardware_description.md
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+1 more)
src/: CMakeLists.txt  PetitPoucet.hh  README.md  config.txt  create_time-space_stamp.cc  main1.cc  main2.cc  main_interface.cc  side_server_for_RTK.cc
src/PetitPoucet/: CMakeLists.txt  FileManipulation.hh
src/PetitPoucet/Server/: ServerInterface.cc  ServerInterface.hh
src/PetitPoucet/UI/: TerminalInterface.cc  TerminalInterface.hh
src/PetitPoucet/Utils/: Utils.cc  Utils.hh  utils.cc  utils.hh
src/executables/: CMakeLists.txt  main1.cc  main2.cc
